# webapp/config/openapi/api.swagger.json
@@ -105,6 +105,70 @@
         ]
       }
     },
+    "/v1/connectors/accounts": {
+      "post": {
+        "operationId": "OctopusService_ListAccounts",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1.ListAccountsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/google.rpc.Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1.ListAccountsRequest"
+            }
+          }
+        ],
+        "tags": [
+          "OctopusService"
+        ]
+      }
+    },
+    "/v1/connectors/accounts/setup": {
+      "post": {
+        "operationId": "OctopusService_SelectAccount",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1.WorkspaceConnector"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/google.rpc.Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1.SelectAccountRequest"
+            }
+          }
+        ],
+        "tags": [
+          "OctopusService"
+        ]
+      }
+    },
     "/v1/invitations": {
       "post": {
         "operationId": "UsersService_GetInvitation",
@@ -521,10 +585,12 @@
       "type": "object",
       "properties": {
         "@type": {
-          "type": "string"
+          "type": "string",
+          "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. This string must contain at least\none \"/\" character. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
         }
       },
-      "additionalProperties": {}
+      "additionalProperties": {},
+      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
     "google.rpc.Status": {
       "type": "object",
@@ -543,6 +609,14 @@
           }
         }
       }
+    },
+    "v1.AuthType": {
+      "type": "string",
+      "enum": [
+        "OAUTH2",
+        "API_KEY"
+      ],
+      "default": "OAUTH2"
     },
     "v1.AuthenticatedUser": {
       "type": "object",
@@ -586,20 +660,12 @@
           "type": "string"
         },
         "authType": {
-          "$ref": "#/definitions/v1.CatalogConnector.AuthType"
+          "$ref": "#/definitions/v1.AuthType"
         },
         "authUrl": {
           "type": "string"
         }
       }
-    },
-    "v1.CatalogConnector.AuthType": {
-      "type": "string",
-      "enum": [
-        "OAUTH2",
-        "API_KEY"
-      ],
-      "default": "OAUTH2"
     },
     "v1.CatalogConnectorList": {
       "type": "object",
@@ -631,6 +697,28 @@
         },
         "code": {
           "type": "string"
+        }
+      }
+    },
+    "v1.ConnectorSecret": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "v1.ConnectorSecretPair": {
+      "type": "object",
+      "properties": {
+        "connector": {
+          "$ref": "#/definitions/v1.WorkspaceConnector"
+        },
+        "credentials": {
+          "$ref": "#/definitions/v1.ConnectorSecret"
         }
       }
     },
@@ -703,6 +791,9 @@
         "email": {
           "type": "string"
         },
+        "token": {
+          "type": "string"
+        },
         "organization": {
           "$ref": "#/definitions/v1.Organization"
         },
@@ -722,6 +813,28 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/v1.Invitation"
+          }
+        }
+      }
+    },
+    "v1.ListAccountsRequest": {
+      "type": "object",
+      "properties": {
+        "workspaceId": {
+          "type": "string"
+        },
+        "provider": {
+          "type": "string"
+        }
+      }
+    },
+    "v1.ListAccountsResponse": {
+      "type": "object",
+      "properties": {
+        "accounts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1.ProviderAccount"
           }
         }
       }
@@ -788,11 +901,45 @@
         }
       }
     },
+    "v1.ProviderAccount": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        },
+        "test": {
+          "type": "boolean"
+        },
+        "currency": {
+          "type": "string"
+        }
+      }
+    },
     "v1.RefreshRequest": {
       "type": "object",
       "properties": {
         "refreshToken": {
           "type": "string"
+        }
+      }
+    },
+    "v1.SelectAccountRequest": {
+      "type": "object",
+      "properties": {
+        "workspaceConnectorId": {
+          "type": "string"
+        },
+        "accountId": {
+          "type": "string"
+        },
+        "accountName": {
+          "type": "string"
+        },
+        "isTestAccount": {
+          "type": "boolean"
         }
       }
     },
@@ -959,6 +1106,12 @@
         },
         "status": {
           "type": "string"
+        },
+        "authScheme": {
+          "$ref": "#/definitions/v1.AuthType"
+        },
+        "accountConfig": {
+          "$ref": "#/definitions/v1.ProviderAccount"
         },
         "expiresIn": {
           "type": "string",
